kube/grayscale/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grayscale
  namespace: grayscale
  labels:
    app: grayscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grayscale
  template:
    metadata:
      labels:
        app: grayscale
    spec:
      containers:
      - name: grayscale
        image: kingbrady/grayscale:1.0.0
        ports:
        - containerPort: 80
