kube/grayscale/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grayscale
  namespace: grayscale
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: grayscale
  type: ClusterIP
